<resources>
    <string name="app_name">CSE327 Projet</string>
    <string name="user_registration">User Registration</string>
    <string name="full_name">Full Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_an_account_login_here">Have an account? Login here!</string>
    <string name="officials_click_here">OFFICIALS CLICK HERE</string>
    <string name="register">Register</string>
</resources>